# coding_challenges

./: .gitignore  .pre-commit-config.yaml  .pre-push-config.yaml  Makefile  README.md  README.pt-br.md  pyproject.toml
.github/workflows/: python-app.yml
coding_challenges/word_count/: main.py  wc.py
tests/word_count/: test_main.py  test_wc.py
