[tool.poetry]
name = "coding-challenges"
version = "0.1.0"
description = "Repository with solutions for coding challenges https://codingchallenges.fyi/ problems."
authors = ["Daniel Besen de Aguiar <daniel.bdaguiar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
